# rusty-vue

./: Cargo.toml  README.md  package.json  vue.config.js
src/: App.vue  lib.rs  main.js
