[package]
name = "rusty-vue"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ['derive'] }
wasm-bindgen = { version = "0.2.74", features = ['serde-serialize']}
web-sys = { version = "0.3.54", features = ['console'] }
js-sys = "0.3.55"
